--- a/changelog/_posts/2013-10-26-Flacon-0.9.2.md
+++ b/changelog/_posts/2013-10-26-Flacon-0.9.2.md
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: default
 ---
 * Fix regression: Drag'n'drop support.
 * Fix: Encoding interrupted if output path contains brackets. 
