--- a/changelog/_posts/2014-07-17-Flacon-1.0.0.md
+++ b/changelog/_posts/2014-07-17-Flacon-1.0.0.md
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: default
 ---
 * Added a set of pre defined patterns and history for they.
 * Added encoding support for Windows 1250, Windows 1252-1258
