Flacon in the official Fedora repository

--- a/download/_posts/1000-01-03-Fedora.md
+++ b/download/_posts/1000-01-03-Fedora.md
@@ -3,27 +3,7 @@ layout: default
 ---
 
 ## Fedora
-_Fedora_ users can use russianfedora-free repository or directly from [koji](http://koji.russianfedora.pro/koji/packageinfo?packageID=18)
+_Fedora_ users can install it from the official repositories.
 
 
-Open up a terminal and input these commands:
-
-```
-sudo dnf install --nogpgcheck \
-http://mirror.yandex.ru/fedora/russianfedora/russianfedora/free/fedora/russianfedora-free-release-stable.noarch.rpm \
-http://mirror.yandex.ru/fedora/russianfedora/russianfedora/nonfree/fedora/russianfedora-nonfree-release-stable.noarch.rpm
-sudo dnf install flacon
-```
-
-<!---
-sudo dnf install --nogpgcheck 
-http://mirror.yandex.ru/fedora/russianfedora/russianfedora/free/fedora/russianfedora-free-release-stable.noarch.rpm 
-http://mirror.yandex.ru/fedora/russianfedora/russianfedora/nonfree/fedora/russianfedora-nonfree-release-stable.noarch.rpm
-
-
-_Fedora_ users can use repository at [copr.fedoraproject.org](https://copr.fedoraproject.org/coprs/region51/flacon/). Open up a terminal and input these commands:
-
-    sudo dnf copr enable region51/flacon
     sudo dnf install flacon
-
--->
