Add appcast feed

--- a/changelog/_posts/2018-03-16-Flacon-4.0.0-for-MacOS.md
+++ b/changelog/_posts/2018-03-16-Flacon-4.0.0-for-MacOS.md
@@ -1,6 +1,16 @@
 ---
 layout: default
-version: 4.0.0 for MacOS
+version: 4.0.0
+title: Flacon 4.0.0 for MacOS 
+apple: true
 ---
 
 We‘re happy to announce that the Flacon [available for MacOS](https://github.com/flacon/flacon/releases/download/v{{site.flacon.release.version}}/Flacon_{{site.flacon.release.version}}.dmg).
+
+
+
+
+
+
+
+
