--- a/download/_posts/1000-01-03-Debian.md
+++ b/download/_posts/1000-01-03-Debian.md
@@ -2,25 +2,17 @@
 layout: default
 ---
 
-## Debian
+## Debian and Linux Mint "Debian"
 
-### Stable, Unstable and Testing
+**Debian** and **Linux Mint "Debian"** users can use repository at [OpenSUSE Build Service](http://download.opensuse.org/repositories/home:/Sokoloff/).
 
-_Debian stable, unstable and testing_ and _Linux Mint "Debian"_ users can use repository at [OpenSUSE Build Service] (http://download.opensuse.org/repositories/home:/Sokoloff/Debian_7.0/).
 Open up a terminal and input these commands as root:
 
-    echo "deb http://download.opensuse.org/repositories/home:/Sokoloff/Debian_7.0 ./" > /etc/apt/sources.list.d/flacon.list
-    wget http://download.opensuse.org/repositories/home:/Sokoloff/Debian_7.0/Release.key -O- | apt-key add -
+{% for i in (8..9) reversed %}
+### Debian {{i}}
+
+    echo "deb http://download.opensuse.org/repositories/home:/Sokoloff/Debian_{{i}}.0 ./" > /etc/apt/sources.list.d/flacon.list
+    wget http://download.opensuse.org/repositories/home:/Sokoloff/Debian_{{i}}.0/Release.key -O- | apt-key add -
     apt-get update
     apt-get install flacon
-
-
-### OldStable
-
-_Debian old stable_ users can use repository at [OpenSUSE Build Service] (http://download.opensuse.org/repositories/home:/Sokoloff/Debian_6.0/).
-Open up a terminal and input these commands as root:
-
-    echo "deb http://download.opensuse.org/repositories/home:/Sokoloff/Debian_6.0 ./" > /etc/apt/sources.list.d/flacon.list
-    wget http://download.opensuse.org/repositories/home:/Sokoloff/Debian_6.0/Release.key -O- | apt-key add -
-    apt-get update
-    apt-get install flacon
+{% endfor %}
