--- a/download/_posts/1000-01-01-Apple.md
+++ b/download/_posts/1000-01-01-Apple.md
@@ -4,4 +4,5 @@ layout: default
 
 ## Apple macOS
 _Mac OS_ users can download program from the our site.<br>
-[Flacon_{{site.flacon.release.version}}.dmg](https://github.com/flacon/flacon/releases/download/v{{site.flacon.release.version}}/Flacon_{{site.flacon.release.version}}.dmg)
+[Flacon_4.0.0.dmg](https://github.com/flacon/flacon/releases/download/v4.0.0/Flacon_4.0.0.dmg)
+<!--[Flacon_{{site.flacon.release.version}}.dmg](https://github.com/flacon/flacon/releases/download/v{{site.flacon.release.version}}/Flacon_{{site.flacon.release.version}}.dmg)-->
