dmg file for 5.0.0

--- a/changelog/_posts/2018-11-05-Flacon-5.0.0.md
+++ b/changelog/_posts/2018-11-05-Flacon-5.0.0.md
@@ -1,7 +1,7 @@
 ---
 layout: default
 version: 5.0.0
-apple: false
+apple: true
 ---
 
 * Added support to change sample rate and bit depth for output audio files.
