Automatically put the latest version for download .dmg file

--- a/download/_posts/1000-01-01-Apple.md
+++ b/download/_posts/1000-01-01-Apple.md
@@ -1,8 +1,9 @@
 ---
 layout: default
-Version: 4.1.0
 ---
 
 ## Apple macOS
 _Mac OS_ users can download program from the our site.<br>
-[Flacon_{{page.Version}}.dmg](https://github.com/flacon/flacon/releases/download/v{{page.Version}}/Flacon_{{page.Version}}.dmg)
+{% for post in site.categories.changelog %}{% if post.apple %}[Flacon_{{post.version}}.dmg](https://github.com/flacon/flacon/releases/download/v{{post.version}}/Flacon_{{post.version}}.dmg)
+{% break %}
+{%endif%}{% endfor %}
