dmg file for 5.2.0

--- a/changelog/_posts/2019-03-31-Flacon-5.2.0.md
+++ b/changelog/_posts/2019-03-31-Flacon-5.2.0.md
@@ -1,7 +1,7 @@
 ---
 layout: default
 version: 5.2.0
-apple: false
+apple: true
 ---
 
 * Fix: The flacon doesn't handle CUE files when a track has index greater than 01.
