Enable legacy dmg feed

--- a/changelog/_posts/2019-09-29-Flacon-5.5.1.md
+++ b/changelog/_posts/2019-09-29-Flacon-5.5.1.md
@@ -1,7 +1,8 @@
 ---
 layout: default
 version: 5.5.1
-apple: false
+apple: true
+apple_legacy: true
 ---
 
 * Fix. The program could not convert HD FLAC files if you are using flac version 1.33.
