--- a/download/_posts/1000-01-01-Apple.md
+++ b/download/_posts/1000-01-01-Apple.md
@@ -7,9 +7,8 @@ _Mac OS_ users can download program from the our site.<br>
 {% for post in site.categories.changelog %}{% if post.apple %}[Flacon_{{post.version}}.dmg](https://github.com/flacon/flacon/releases/download/v{{post.version}}/Flacon_{{post.version}}.dmg)
 {% break %}
 {%endif%}{% endfor %}
-<br>
 
 If you are using old versions of _Mac OS_ and have problems with running the Flacon. Try the version for the legacy MacOS.<br>
-{% for post in site.categories.changelog %}{% if post.apple_legacy %}[Flacon_{{post.version}}.dmg](https://github.com/flacon/flacon/releases/download/v{{post.version}}/Flacon_{{post.version}}-LegacyOS.dmg)
+{% for post in site.categories.changelog %}{% if post.apple_legacy %}[Flacon_{{post.version}}-LegacyOS.dmg](https://github.com/flacon/flacon/releases/download/v{{post.version}}/Flacon_{{post.version}}-LegacyOS.dmg)
 {% break %}
 {%endif%}{% endfor %}
