--- a/changelog/_posts/2020-05-30-Flacon-6.0.0.md
+++ b/changelog/_posts/2020-05-30-Flacon-6.0.0.md
@@ -2,7 +2,7 @@
 layout: default
 version: 6.0.0
 apple: true
-apple_legacy: false
+apple_legacy: true
 ---
 
 * Added support of profiles, you can have different encoding options for different cases, such as maximum quality for your computer, and CD quality for your phone.
