Add MacOs legay link for 6.1.0

--- a/changelog/_posts/2020-06-26-Flacon-6.1.0.md
+++ b/changelog/_posts/2020-06-26-Flacon-6.1.0.md
@@ -2,7 +2,7 @@
 layout: default
 version: 6.1.0
 apple: true
-apple_legacy: false
+apple_legacy: true
 ---
 
 * Save TOTALDISCS and DISCNUMBER tags to the output CUE file.
