--- a/download/_posts/1000-01-03-Debian.md
+++ b/download/_posts/1000-01-03-Debian.md
@@ -8,11 +8,16 @@ layout: default
 
 Open up a terminal and input these commands as root:
 
-{% for i in (9..10) reversed %}
-### Debian {{i}}
+### Debian 10
 
-    echo "deb http://download.opensuse.org/repositories/home:/Sokoloff/Debian_{{i}}.0 ./" > /etc/apt/sources.list.d/flacon.list
-    wget http://download.opensuse.org/repositories/home:/Sokoloff/Debian_{{i}}.0/Release.key -O- | apt-key add -
+    echo "deb http://download.opensuse.org/repositories/home:/Sokoloff/Debian_10 ./" > /etc/apt/sources.list.d/flacon.list
+    wget http://download.opensuse.org/repositories/home:/Sokoloff/Debian_10/Release.key -O- | apt-key add -
     apt-get update
     apt-get install flacon
-{% endfor %}
+
+### Debian 9
+
+    echo "deb http://download.opensuse.org/repositories/home:/Sokoloff/Debian_9.0 ./" > /etc/apt/sources.list.d/flacon.list
+    wget http://download.opensuse.org/repositories/home:/Sokoloff/Debian_9.0/Release.key -O- | apt-key add -
+    apt-get update
+    apt-get install flacon    
