Add MacOS bundle

--- a/changelog/_posts/2022-08-29-Flacon-9.2.0.md
+++ b/changelog/_posts/2022-08-29-Flacon-9.2.0.md
@@ -1,7 +1,7 @@
 ---
 layout: default
 version: 9.2.0
-apple: false
+apple: true
 ---
 
 * Improved algorithm of cover auto selection. Square pictures have a priority over other.
