Add MacOS bundle

--- a/changelog/_posts/2022-09-23-Flacon-9.3.0.md
+++ b/changelog/_posts/2022-09-23-Flacon-9.3.0.md
@@ -1,7 +1,7 @@
 ---
 layout: default
 version: 9.3.0
-apple: false
+apple: true
 ---
 
 * The program gives a clear error message if the necessary utilities (sox, encoders, etc.) are missing
