Update download instructions for Debian

--- a/download/_posts/1000-01-03-Debian.md
+++ b/download/_posts/1000-01-03-Debian.md
@@ -6,19 +6,19 @@ layout: default
 
 *Debian* and *Linux Mint "Debian"* users can use repository at [OpenSUSE Build Service](http://download.opensuse.org/repositories/home:/Sokoloff/).
 
-Open up a terminal and input these commands as root:
+Open up a terminal and input these commands:
 
 ### Debian 11
 
-    echo "deb http://download.opensuse.org/repositories/home:/Sokoloff/Debian_11 ./" > /etc/apt/sources.list.d/flacon.list
-    wget http://download.opensuse.org/repositories/home:/Sokoloff/Debian_11/Release.key -O- | apt-key add -
-    apt-get update
-    apt-get install flacon
+    echo "deb http://download.opensuse.org/repositories/home:/Sokoloff/Debian_11 ./" | sudo tee /etc/apt/sources.list.d/flacon.list
+    wget http://download.opensuse.org/repositories/home:/Sokoloff/Debian_11/Release.key -O- | sudo apt-key add -
+    sudo apt-get update
+    sudo apt-get install flacon
 
 
 ### Debian 10
 
-    echo "deb http://download.opensuse.org/repositories/home:/Sokoloff/Debian_10 ./" > /etc/apt/sources.list.d/flacon.list
-    wget http://download.opensuse.org/repositories/home:/Sokoloff/Debian_10/Release.key -O- | apt-key add -
-    apt-get update
-    apt-get install flacon
+    echo "deb http://download.opensuse.org/repositories/home:/Sokoloff/Debian_10 ./" | sudo tee /etc/apt/sources.list.d/flacon.list
+    wget http://download.opensuse.org/repositories/home:/Sokoloff/Debian_10/Release.key -O- | sudo apt-key add -
+    sudo apt-get update
+    sudo apt-get install flacon
