Add MacOS bundle

--- a/changelog/_posts/2022-10-02-Flacon-9.4.0.md
+++ b/changelog/_posts/2022-10-02-Flacon-9.4.0.md
@@ -1,7 +1,7 @@
 ---
 layout: default
 version: 9.4.0
-apple: false
+apple: true
 ---
 
 * Fixed bug. The program did not work with CUE files containing multiple audio file tags
