Close issue #187: Flacon for Debian 11 / bullseye

--- a/download/_posts/1000-01-03-Debian.md
+++ b/download/_posts/1000-01-03-Debian.md
@@ -11,7 +11,7 @@ Open up a terminal and input these commands:
 ### Debian 11
 
     echo "deb http://download.opensuse.org/repositories/home:/Sokoloff/Debian_11 ./" | sudo tee /etc/apt/sources.list.d/flacon.list
-    wget http://download.opensuse.org/repositories/home:/Sokoloff/Debian_11/Release.key -O- | sudo apt-key add -
+    wget http://download.opensuse.org/repositories/home:/Sokoloff/Debian_11/Release.key -O- | gpg --dearmor | sudo tee /etc/apt/trusted.gpg.d/flacon.gpg
     sudo apt-get update
     sudo apt-get install flacon
 
@@ -19,6 +19,6 @@ Open up a terminal and input these commands:
 ### Debian 10
 
     echo "deb http://download.opensuse.org/repositories/home:/Sokoloff/Debian_10 ./" | sudo tee /etc/apt/sources.list.d/flacon.list
-    wget http://download.opensuse.org/repositories/home:/Sokoloff/Debian_10/Release.key -O- | sudo apt-key add -
+    wget http://download.opensuse.org/repositories/home:/Sokoloff/Debian_10/Release.key -O- | gpg --dearmor | sudo tee /etc/apt/trusted.gpg.d/flacon.gpg
     sudo apt-get update
     sudo apt-get install flacon
