--- a/changelog/_posts/2022-11-20-Flacon-9.5.1.md
+++ b/changelog/_posts/2022-11-20-Flacon-9.5.1.md
@@ -2,6 +2,8 @@
 layout: default
 version: 9.5.1
 apple: true
+appimage: true
+
 ---
 
 * Fixed bug: In the tag editing fields, the text cursor jumped to the end of the line after entering a letter.
